fixed more mobile spacing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -337,6 +337,10 @@ a, a:hover
     width: 40px;
     font-size: 24px;
     color: black;
+		margin-left: 4em;
+		font-size: 14px;
+
+
 }
 
 .location-info p {
@@ -344,7 +348,6 @@ a, a:hover
     font-size: 18px;
     line-height: 32px;
     color: black;
-		margin-left: 0em;
 }
 .contact-icon-container {
     position: absolute;
